appId: com.optioeducation.optio
name: "Evidence: File Upload Option"
tags:
  - evidence
---
- runFlow: ../auth/login-as-student.yaml
- tapOn:
    id: "capture-button"
- assertVisible:
    text: "Capture a Moment"
    timeout: 10000
- assertVisible:
    text: "File"
    timeout: 5000
